--- a/package.json
+++ b/package.json
@@ -14,5 +14,16 @@
   "bugs": {
     "url": "https://github.com/vigneshherao/React-Pr/issues"
   },
-  "homepage": "https://github.com/vigneshherao/React-Pr#readme"
+  "homepage": "https://github.com/vigneshherao/React-Pr#readme",
+  "dependencies": {
+    "parcel": "^2.11.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "process": "^0.11.10"
+  },
+  "browserslist":[
+    "last 2 versions"
+  ]
 }
